# MaximAI

./: .gitignore  Dockerfile  README.md  chat.py  deploy.sh  interact.ipynb  main.py  pyproject.toml  test.sh
data/patient_dialogue_samples/: patient_01.txt  patient_02.txt  patient_03.txt  patient_04.txt  patient_05.txt  patient_06.txt  patient_07.txt  patient_08.txt  patient_09.txt  patient_10.txt
docs/: architecture.excalidraw
notebooks/: interact.ipynb
src/maximai/: context.py  langchain.py  schemas.py  template.py  text_processing.py  utils.py
