[tool.poetry]
name = "maximai"
version = "0.1.0"
description = ""
authors = ["JSchuurmans <jetzeschuurmans@gmail.com>"]
readme = "README.md"
packages = [{include = "maximai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-google-vertexai = "^1.0.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
ipykernel = "^6.29.4"
streamlit = "^1.33.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
