[tool.poetry]
name = "maximai"
version = "0.1.0"
description = ""
authors = ["JSchuurmans <jetzeschuurmans@gmail.com>"]
readme = "README.md"
packages = [{include = "maximai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-google-vertexai = "^1.0.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
ipykernel = "^6.29.4"
streamlit = "^1.33.0"
toml = "^0.10.2"
black = "^24.4.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
inflect = "^7.2.1"
google-cloud-speech = "^2.26.0"
google-cloud-texttospeech = "^2.16.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
